# quick-send

./: .env.example  .gitignore  PRODUCT.md  README.md  biome.jsonc  drizzle.config.ts  index.html  lefthook.yml  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: check.yml
docs/: plan.md  v2.md  v3.md
engine/: Cargo.toml
engine/src/: lib.rs  main_reference.rs
engine/tests/: test_conflicts.rs  test_directory.rs  test_events.rs  test_large_file.rs  test_metadata.rs  test_multi_item.rs  (+1 more)
migrations/: 0000_loving_living_tribunal.sql
src/: dev.ts  routeTree.gen.ts  router.tsx  run-utils.ts  start.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/plugins/tauri-plugin-native-utils/: Cargo.toml  README.md  build.rs
src-tauri/plugins/tauri-plugin-native-utils/android/: .gitignore  build.gradle.kts  settings.gradle
src-tauri/plugins/tauri-plugin-native-utils/android/src/main/java/com/altsendme/plugin/native_utils/: CopyUtils.kt  NativeUtils.kt
src-tauri/plugins/tauri-plugin-native-utils/permissions/: default.toml
src-tauri/plugins/tauri-plugin-native-utils/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-native-utils/permissions/autogenerated/commands/: cancel_job.toml  select_download_folder.toml  select_send_document.toml  select_send_folder.toml
src-tauri/plugins/tauri-plugin-native-utils/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-native-utils/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+88 files in other folders)
